CORE-1118 - Fixed loading spinner icon being either too small or not spinning around the center. Added disabled and invalid rendering behaviour to select. Emptied chosen.jquery.min.js as it is currently included in the default player and we don't want to cause a 404

--- a/runtime/css/select.less
+++ b/runtime/css/select.less
@@ -14,20 +14,38 @@ permissions and limitations under the License.
     .select-wrapper {
         min-width: 300px;
         width: 100%;
-        display: table;
+        display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+        display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+        display: -ms-flexbox;      /* TWEENER - IE 10 */
+        display: -webkit-flex;     /* NEW - Chrome */
+        display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
     }
 
     .select-loading-icon {
-        float: left;
-        font-size: 1.8em;
-        margin-left: 0.5em;
-        top: 4px;
+        width: 50px;
+        padding-left: 0.5em;
+        padding-top: 4px;
+    }
+
+    .select-loading-icon > .glyphicon {
+        font-size: 30px;
     }
 
     .Select {
-        display: table-cell;
+        -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+        -moz-box-flex: 1;         /* OLD - Firefox 19- */
+        -webkit-flex: 1;          /* Chrome */
+        -ms-flex: 1;              /* IE 10 */
+        flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
     }
 
+    .Select-control {
+        border-radius: 0;
+    }
+
+    .mw-select.has-error .Select-control {
+        border-color: red;
+    }
 
 }
 
